# MP-2020-2

./: .gitignore  LICENSE  README.md  T1-MP
T1/: CMakeLists.txt  Makefile  README.md
T1/include/: pilha.hpp
T1/src/: pilha.cpp  testa_pilha.cpp
T2/: CMakeLists.txt  Makefile  README.md
T2/include/: romano.hpp
T2/src/: main  main.cpp  romano.cpp  testa_romano.cpp
include/: pilha.hpp
src/: pilha.cpp  testa_pilha.cpp
